# Objective-AI-assessment

./: .flake8  README.md  data.db  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
app/: .env  auth.py  crud.py  db.py  deps.py  eval.py  main.py  models.py  schemas.py
tests/: test_app.py
